--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@types/jest": "^29.4.0",
     "eslint": "^8.34.0",
     "jest": "^29.4.3"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.0"
   }
 }
